static/main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

@font-face {
    font-family: 'oswald_regularregular';
    src: url('oswald-regular-webfont.eot');
    src: url('oswald-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('oswald-regular-webfont.woff2') format('woff2'),
         url('oswald-regular-webfont.woff') format('woff'),
         url('oswald-regular-webfont.ttf') format('truetype'),
         url('oswald-regular-webfont.svg#oswald_regularregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

.home {
  position: fixed;
  display: flex;
  height: 100vh;
  width: 100%;
  color: white;
  font-family: oswald_regularregular;
  font-size: x-large;
  text-transform: uppercase;
  /* The background is white on mac(safari/firefox/chrome)*/
  /* The background is #EBEBEB on linux(firefox/chrome)*/
  /*background-color: #EBEBEB;*/
}

.left {
  position: relative;
  background-color: black;
  transition: all .7s;
  text-align: right;
  height: 100vh;
  width: 50%;
  margin-left: 0;
}

.home--opened > .left {
  width: 6rem;
}

.right {
  position: relative;
  background-color: black;
  transition: all .7s;
  align-self: flex-end;
  height: 100vh;
  width: 50%;
  margin-left: 0;
}

.home--opened > .right {
  margin-left: calc(100% - 12rem);
  width: 6rem;
}

.text {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  transition: all .7s;
  white-space: nowrap;
}

.title {
  height: 100vh;
}

.home > .left > .title,
.home > .right > .title {
  font-size: 3rem;
}

.home--opened > .left > .title,
.home--opened > .right > .title {
  font-size: x-large;
  width: 3rem;
}

.left > .title > .text {
  margin-right: .5rem;
}

.home--opened > .left > .title > .text {
  transform: rotate(-90deg);
  margin-right: 0;
  top: 90vh;
}

.right-text {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  transition: all .7s;
  white-space: nowrap;
}

.home--opened > .right > .title > .text {
  transform: rotate(-90deg);
  margin: 0;
  top: 90vh;
}

.subtitle {
  position: absolute;
  margin-top: auto;
  background-color: grey;
  transition: top .7s ease;
  transition-delay: .9s;
  height: 100vh;
  top: 100%;
  width: 0;
  right: 0;
  cursor: pointer;
}

.home--opened > .left > .subtitle {
  width: 3rem;
  top: 0;
}

.home--opened > .right > .subtitle {
  width: 3rem;
  top:0;
}

.subtitle > .text {
  top: 90%;
  transform: rotate(-90deg);
}

.home--villa > .left {
  margin-left: calc(100% - 12rem);
}

.home--villa > .right {
  margin-left: 0;
}

.home--model > .right {
  margin-left: 0;
}

.main-subtitle {
  position: absolute;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  width: 300px;
  bottom: 3rem;
  font-size: medium;
  transition: all .3s ease;
}

.home--opened > .main-subtitle {
  color: black;
}

.home--villa > .main-subtitle,
.home--model > .main-subtitle {
  bottom: -3rem;
}

.toolbar {
  position: absolute;
  display: flex;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  width: 12rem;
  height: 170px;
  bottom: -170px;
  font-size: large;
  transition: all .7s ease;
  background: black;
  color: white;
  z-index: 1;
}

.toolbar--opened {
  bottom: 0;
}

.toolbar > .tool {
  height: 100%;
  width: 3rem;
}

.tool:hover {
  cursor: pointer;
}
.tool > .text {
  font-size: small;
  top: 130px;
  transform: rotate(-90deg);
}

.color--beige {
  background-color: #f0c8a1;
  color: black;
}

.color--black {
  background-color: black;
  color: white;
}

.color--orange {
  background-color: #e74011;
  color: black;
}

.color--grey {
  background-color: #bfbfbf;
  color: black;
}

.tab {
  position: absolute;
  display: flex;
  top: 5rem;
  width: calc(70% - 4rem);
  height: 50%;
  transition: all .7s ease;
  margin-left: 2rem;
  margin-right: 2rem;
  margin: 0 auto;
  align-items: center;
  justify-content: center;
  z-index: -1;
}

.home--villa > .tab--villa {
  left: 10%;
}
.tab--villa {
  left: -70%;
}

.home--model > .tab--model {
  right: 10%;
}
.tab--model {
  right: -70%;
}

.tab-content {

}

